Fix container and menu spacing

--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,8 +1,9 @@
 html {
 	font-size: 62.5%;
+	height: 100%;
 }
 
 body {
 	font-size: 1.6rem;
-	padding: 0;
+	height: 100%;
 }
