--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -22,9 +22,9 @@
 
 	.menu-right {
 		i {
-			@include span-columns(2);
+			@include span-columns(1.2 of 12);
+			@include pad(0 0 0 2px);
 			margin-top: 15px;
-			margin-right: -25px;
 			color: $inverted-font-color;
 		}
 	}
